--- a/ObjectExercise/Objects.html
+++ b/ObjectExercise/Objects.html
@@ -11,7 +11,7 @@
 
     <h1>This is JavaScript Object Exercise</h1>
     <div class="container">
-      <button type="button" name="button" onclick=DictionaryPrinter(employee); >Name Length</button>
+      <button type="button" name="button" onclick=DictionaryPrinter(employee); >Read Objects</button>
       <button type="button" name="button" onclick = LastName();>Last Name</button>
 
     </div>
