Vertical Bug Fixed

--- a/TicTacToe/TicTacToe.html
+++ b/TicTacToe/TicTacToe.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="">
+
+
     <link rel="stylesheet" href="TicTacToe.css" />
   </head>
   <body>
     <div class="header">
       <h1 style="text-align: center">JavaScript DOM Implementation</h1><br><br>
       <div class="center">
-        <button type="button" id = "b" name="button" class = "btn btn-primary btn-lg" style="height: 40px; width:100px;"   >Reset</button><br><br>
+        <button type="button" id = "b" name="button"  style="height: 40px; width:100px;"   >Reset</button><br><br>
 
       </div>
     </div>
